# Trend_Model_Project

./: .coverage.codespaces-6d83d8.28749.XBOdNVRx  .coverage.codespaces-6d83d8.28768.XFaRPDDx  .coverage.codespaces-6d83d8.28949.XgwKEoHx  .coverage.codespaces-6d83d8.29030.XLbXQJIx  .coverage.runnervm6qbrg.5314.XwsfBphx  .coverage.runnervm6qbrg.5317.XvdDzMlx  .coverage.runnervm6qbrg.5320.XUWurDZx  .coverage.runnervm6qbrg.5323.XGgtWhNx  .coveragerc  .coveragerc.core  .coveragerc.full  .coveragerc.workflows  .dockerignore  .flake8  .gitattributes  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  AGENTS_APP.md  ARCHIVE_WORKFLOWS.md  Agents.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCY_QUICKSTART.md  DOCKER_QUICKSTART.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  IS_2005-07_2008-07.xlsx  Issue-3532-Implementation-Summary.md  Issues.txt  MANIFEST.in  Makefile  Portfolio_Test_Results_Summary.md  README.md  README_APP.md  README_DATA.md  ROBUSTNESS_GUIDE.md  SECURITY.md  (+74 more)
.agents/: issue-2996-ledger.yml  issue-3011-ledger.yml  issue-3203-ledger.yml  issue-3209-ledger.yml  issue-3213-ledger.yml  issue-3218-ledger.yml  issue-3219-ledger.yml  issue-3279-ledger.yml  issue-3284-ledger.yml  issue-3309-ledger.yml  issue-3318-ledger.yml  issue-3321-ledger.yml  issue-3333-ledger.yml  issue-3352-ledger.yml  issue-3363-ledger.yml  issue-3428-ledger.yml  issue-3442-ledger.yml  issue-3470-ledger.yml  issue-3490-ledger.yml  issue-3498-ledger.yml  issue-4159-ledger.yml  issue-4160-ledger.yml  issue-4162-ledger.yml  issue-4163-ledger.yml  issue-4164-ledger.yml  issue-4165-ledger.yml  issue-4167-ledger.yml  issue-4168-ledger.yml  issue-4169-ledger.yml  issue-4447-ledger.yml  issue-4449-ledger.yml  issue-4450-ledger.yml  issue-4451-ledger.yml  issue-4452-ledger.yml  issue-4453-ledger.yml  issue-4454-ledger.yml  issue-4455-ledger.yml  issue-4456-ledger.yml  issue-4457-ledger.yml  issue-4458-ledger.yml  (+32 more)
.autofix-venv/: pyvenv.cfg
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  actionlint-allowlist.txt  agent-label-rules.json  agents.json  autoapprove-allowlist.json  copilot-instructions.md  dependabot.yml  labeler.yml  labels.json  pr-labeler.yml  pull_request_template.md  settings.yml
.ipynb_checkpoints/: PromptCode-checkpoint.ipynb  PromptEngineer-checkpoint.ipynb  Test-checkpoint.ipynb  Vol_Adj_Trend_Analysis_Cleanup7-checkpoint.ipynb
.mypy_cache/: missing_stubs
.streamlit/: secrets.toml
.trend_nl_logs/: nl_ops_2026-01-11.jsonl  nl_ops_2026-01-12.jsonl
Old/: Vol_Adj_Trend_Analysis_Cleanup.py  Vol_Adj_Trend_Analysis_Cleanup7.ipynb  Vol_Adj_Trend_Analysis_Stable.ipynb  pyproject.toml
Trend_Model_Project/: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre‑commit‑config.yaml  Agents.md  Vol_Adj_Trend_Analysis1.5.TrEx.ipynb  pyproject.toml
agents/: .codex-bootstrap-721.json  .codex-bootstrap-948.json  .codex-bootstrap-957.json  .codex-bootstrap-959.json  MAINTENANCE.md  README.md  codex-1012.md  codex-1018.md  codex-1024.md  codex-1064.md  codex-1137.md  codex-1142.md  codex-1147.md  codex-1153.md  codex-1156.md  codex-1158.md  codex-1160.md  codex-1161.md  codex-1162.md  codex-1166.md  codex-1175.md  codex-1180.md  codex-1187.md  codex-1203.md  codex-1205.md  codex-1206.md  codex-1207.md  codex-1220.md  codex-1342.md  codex-1344.md  codex-1348.md  codex-1386.md  codex-1415.md  codex-1417.md  codex-1418.md  codex-1419.md  codex-1426.md  codex-1437.md  codex-1440.md  codex-1441.md  (+402 more)
analysis/: 3d_scatter.ipynb  __init__.py  cv.py  results.py  tearsheet.py
app/: __init__.py
archives/: INVENTORY.md  README.md  ROOT_FILE_INDEX.md
config/: coverage-baseline.json  defaults.yml  demo.yml  demo_rebalance.yml  long_backtest.yml  portfolio_test.yml  quickstart.yml  rebalancing_demo.yml  robust_demo.yml  rolling_hold_bayes.yml  trend.toml  trend_concentrated_2004.yml  trend_universe_2004.yml  walk_forward.yml
core/: rank_selection.py
data/: README.md  Trend Universe Membership.csv
demo/: autofix_demo.py  demo_returns.csv  demo_returns.xlsx  extended_returns.csv
docs/: AGENTS_POLICY.md  CLI.md  COSMETIC_REPAIR_LOG.md  ConfigMap.md  DEPENDENCY_ENFORCEMENT.md  DEPENDENCY_IMPLEMENTATION_SUMMARY.md  DEPENDENCY_MANAGEMENT.md  DEPENDENCY_MANAGEMENT_SUMMARY.md  DEPENDENCY_SYNC.md  DEPENDENCY_SYSTEM_COMPLETE.md  DEPENDENCY_WORKFLOW.md  DemoMaintenance.md  INDEX.md  ModelConfiguration.md  OWNERSHIP.md  PresetStrategies.md  README.md  ReproducibilityGuide.md  STREAMLIT_WIDGET_PATTERNS.md  TrendSignalSettings.md  UI_Parameter_Audit.md  UserGuide.md  WORKFLOW_GUIDE.md  Walkforward.md  agent-automation.md  agent_assignment_verification_plan.md  agent_codex_troubleshooting.md  agents-guard-plan.md  api.md  autofix_type_hygiene.md  autofix_workflow_plan.md  backtesting_harness.md  checks.md  ci-failure-tracker.md  ci-workflow.md  ci_reuse.md  ci_reuse_consolidation_plan.md  code_ownership.md  codex-simulation.md  codex_bootstrap_verification.md  (+67 more)
examples/: README.md  debug_fund_selection.py  demo_robust_weighting.py  demo_turnover_cap.py  integration_example.py  nl_config_demo.py  portfolio_analysis_report.py
issues/: issue_4378_ci_schema_regression.md  issue_config_coverage_report.md  issue_consolidate_config_bridge.md  issue_decompose_pipeline.md  issue_extract_cash_weight_helper.md  issue_rebalancing_cash_modeling.md  issue_unify_diagnostics.md  nl-7-completion.md
notebooks/: README.md
perf/: perf_baseline.json
reports/: code_review.md  tearsheet.md
retired/: README.md  agents-64-pr-comment-commands.yml
scripts/: README.md  __init__.py  archive_agents.sh  auto_type_hygiene.py  benchmark_performance.py  build_autofix_pr_comment.py  check_branch.sh  check_config_coverage.py  check_perf_regression.py  check_test_dependencies.sh  ci_cosmetic_repair.py  ci_coverage_delta.py  ci_feature_assert.py  ci_history.py  ci_metrics.py  classify_ruff.py  classify_test_failures.py  codex_git_bootstrap.sh  compare_perf.py  cosmetic_repair_workflow.py  coverage_history_append.py  debug_zscore_history.py  demo.py  demo_export_fix.py  demo_os_summary.py  dev_check.sh  (+66 more)
(+1950 files in other folders)
