[build-system]
# Pin build dependencies to ensure reproducible installs during Docker builds
requires = ["setuptools==69.5.1", "wheel==0.43.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trend-model"
version = "0.1.0"
description = "Volatility-adjusted trend analysis package"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Trend Analysis Contributors"}
]
maintainers = [
    {name = "Trend Analysis Contributors"}
]
keywords = ["finance", "trend-analysis", "volatility", "portfolio", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas",
    "numpy",
    "PyYAML",
    "types-PyYAML",
    "xlsxwriter",
    "openpyxl",
    "pydantic>=2",
    "hypothesis",
    "matplotlib",
    "fpdf2",
    "ipywidgets",
    "joblib>=1.4",
    "scipy",
    "pandera>=0.20,<0.21",
]

[project.urls]
Homepage = "https://github.com/stranske/Trend_Model_Project"
Repository = "https://github.com/stranske/Trend_Model_Project"
Issues = "https://github.com/stranske/Trend_Model_Project/issues"
Documentation = "https://github.com/stranske/Trend_Model_Project#readme"

[project.scripts]
trend = "trend.cli:main"
trend-analysis = "trend_analysis.run_analysis:main"
trend-multi-analysis = "trend_analysis.run_multi_analysis:main"
trend-model = "trend_analysis.cli:main"
trend-app = "trend_model.app:main"
trend-run = "trend_model.cli:run"

[tool.setuptools.packages.find]
where = ["src"]
include = ["trend_analysis*", "trend_portfolio_app*", "trend_model*"]

[project.optional-dependencies]
app = [
    "streamlit>=1.30",
    "streamlit-sortables",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
]
notebooks = [
    "ipyfilechooser",
    "nbformat",
]
dev = [
    "pre-commit>=3.2.0",
    "black==24.8.0",
    "ruff==0.6.3", 
    "mypy>=1.0.0",
    "flake8",
    "pytest",
    "pytest-cov",
    "pytest-rerunfailures>=13.0",
    "types-PyYAML",
    "jsonschema",
    "httpx>=0.25",
]

[tool.black]
extend-exclude = '''
/(
        Old
    | notebooks/old
    | \\.autofix-venv
    | .*\.ipynb
)/
'''
force-exclude = '''
/\.autofix-venv/
'''

[tool.ruff]
extend-exclude = [
  "notebooks/old",
  "Old",
  "*.ipynb",
  "scripts",
  "manager_attribution_analysis.py",
  "portfolio_analysis_report.py",
  "debug_fund_selection.py",
  "test_multi_period_selection.py",
    ".autofix-venv",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = "^(Old/|notebooks/old/)"
mypy_path = ["src"]
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "src.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "demo_malformed_date_fix",
    "demo_proxy",
    "demo_robust_weighting",
    "demo_turnover_cap",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = "streamlit_app.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.streamlit.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "scripts.verify_codex_bootstrap",
    "scripts.run_multi_demo",
    "scripts.run_real_model",
    "scripts.run_threshold_churn_demo",
    "scripts.benchmark_performance",
    "integration_example",
    "debug_fund_selection",
    "test_multi_period_selection",
]
ignore_errors = true



[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests that exercise external tooling",
]
